--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -11,21 +11,21 @@ jobs:
       matrix:
         include:
           - elixir: "1.6.6"
-            otp: "21.3.8.17"
+            otp: "21.3.8.21"
           - elixir: "1.9.4"
-            otp: "22.3.4.5"
+            otp: "22.3.4.16"
           - elixir: "1.10.4"
-            otp: "23.0.3"
+            otp: "23.2.7"
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
       - name: Install Elixir ${{ matrix.elixir }} on OTP ${{ matrix.otp }}
-        uses: actions/setup-elixir@v1
+        uses: erlef/setup-elixir@v1
         with:
-          otp-version: ${{ matrix.otp }}
-          elixir-version: ${{ matrix.elixir }}
+          otp-version: "${{ matrix.otp }}"
+          elixir-version: "${{ matrix.elixir }}"
       - name: Run presubmits
         run: mix do deps.get, presubmit --pr ${{ github.event.pull_request.number }}
   required-checks:
